fixed overflow on sidebar chat

--- a/client/src/components/SidebarChat/style.css
+++ b/client/src/components/SidebarChat/style.css
@@ -1,11 +1,12 @@
 .sidebarChat {
-  display: flex;
   justify-content: center;
   flex-direction: column;
+  flex: 1;
   padding: 20px;
   cursor: pointer;
   background-color: white;
   border-bottom: 1px solid gray;
+  overflow: scroll;
 }
 .sidebarChat:hover {
   background-color: #ebebeb;
